gccida/c3/pent_np_unit_ready_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/insn-attrtab.c:9736:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 10478, "pent_np_unit_ready_cost"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/insn-attrtab.c:9736:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 10478, "pent_np_unit_ready_cost"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/insn-attrtab.c:9863:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( memory_operand( recog_data_0.operand[1], VOIDmode) ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/insn-attrtab.c:9928:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !q_regs_operand( recog_data_0.operand[0], QImode) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/insn-attrtab.c:9931:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& q_regs_operand( recog_data_0.operand[0], QImode) 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/insn-attrtab.c:9945:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| memory_operand( recog_data_0.operand[1], VOIDmode) 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/insn-attrtab.c:9946:43: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !which_alternative && !memory_operand( recog_data_0.operand[1], VOIDmode)) ) 
                                          ^~~~~~~~~~~~
                                          recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/insn-attrtab.c:9960:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| memory_operand( recog_data_0.operand[1], VOIDmode) 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/insn-attrtab.c:9961:47: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| which_alternative == 1 && !memory_operand( recog_data_0.operand[1], VOIDmode)) ) 
                                              ^~~~~~~~~~~~
                                              recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/insn-attrtab.c:10306:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !incdec_operand( recog_data_0.operand[2], DImode) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/insn-attrtab.c:10312:28: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
else if ( !incdec_operand( recog_data_0.operand[2], DImode) 
                           ^~~~~~~~~~~~
                           recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/insn-attrtab.c:10339:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !incdec_operand( recog_data_0.operand[2], SImode) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/insn-attrtab.c:10345:28: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
else if ( !incdec_operand( recog_data_0.operand[2], SImode) 
                           ^~~~~~~~~~~~
                           recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/insn-attrtab.c:10368:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| incdec_operand( recog_data_0.operand[2], HImode) 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/insn-attrtab.c:10373:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& !incdec_operand( recog_data_0.operand[2], HImode) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/insn-attrtab.c:10405:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !incdec_operand( recog_data_0.operand[2], HImode) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/insn-attrtab.c:10411:28: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
else if ( !incdec_operand( recog_data_0.operand[2], HImode) 
                           ^~~~~~~~~~~~
                           recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/insn-attrtab.c:10434:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| incdec_operand( recog_data_0.operand[2], QImode) 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/insn-attrtab.c:10439:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& !incdec_operand( recog_data_0.operand[2], QImode) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_np_unit_ready_cost/src/obj/insn-attrtab.o] Error 1
